# AkiraOS

./: .gitignore  .gitmodules  AUDIO_INTEGRATION_SUMMARY.md  AkiraOS.code-workspace  BUILD_FIX_SUMMARY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ESP32S3_BUILD_STATUS.md  Kconfig  LICENSE  OCRE_MIGRATION_NOTES.md  QUICKSTART.md  README.md  SIMULATOR_COMPLETE.md  SIMULATOR_GUIDE.md  TODO_V2.md  VERSION  akira.overlay  build.sh  build_all.sh  build_and_run.sh  build_both.sh  flash.sh  iot-verse.code-workspace  mcuboot_disable_ocre.conf  partitions.csv  prj.conf  run_simulator.sh  west.yml  zephyr_esp32_timer_compat.patch
.github/: CODEOWNERS
.github/agents/: Akira-agent.md
.github/workflows/: build.yml  ci.yml  tests.yml
AkiraHW/: BOM_PCB_Akira Basic 1.5_2025-05-05.csv
AkiraHW/Housing/: Akira.stl
boards/: akira_basic_esp32.dts  akiraconsole_esp32s3_procpu.conf  akiraconsole_esp32s3_procpu.overlay  b_u585i_iot02a.conf  b_u585i_iot02a.overlay  esp32_devkitc_procpu.conf  esp32_devkitc_procpu.overlay  esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay  esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wroom_procpu.overlay  esp32c3_devkitm.conf  esp32c3_devkitm.overlay  esp32c3_supermini.conf  esp32s3_devkitm.overlay  esp32s3_devkitm_esp32s3_procpu.conf  esp32s3_devkitm_esp32s3_procpu.overlay  esp32s3_devkitm_esp32s3_procpu_NO_PSRAM.conf  esp32s3_supermini_esp32s3_procpu.conf  esp32s3_supermini_esp32s3_procpu.overlay  minimal_esp32c3.conf.example  native_sim.conf  native_sim.overlay  native_sim.yaml  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_h563zi.conf  nucleo_h563zi.overlay  sensors.conf  steval_stwinbx1.conf  steval_stwinbx1.overlay
boards/akira_basic_esp32/: akira_basic_esp32.overlay  akira_basic_esp32.yaml
boards/akiraconsole/: Kconfig.akiraconsole  akiraconsole-pinctrl.dtsi  akiraconsole_esp32s3_procpu.dts  akiraconsole_esp32s3_procpu.yaml  akiraconsole_esp32s3_procpu_defconfig  board.cmake  board.yml
boards/esp32s3_supermini/: Kconfig.esp32s3_supermini  board.yml  esp32s3_supermini-pinctrl.dtsi  esp32s3_supermini_esp32s3_procpu.dts  esp32s3_supermini_esp32s3_procpu.yaml
docs/: AKIRA_HAL_SIMULATION.md  APP_DEVELOPMENT.md  APP_DEVELOPMENT_GUIDE.md  APP_MANAGER.md  ARCHITECTURE.md  AkiraOS  AkiraOS.md  Architecture.md  BUILD_PLATFORMS.md  BUILD_SCRIPTS.md  BUILD_UPDATES_SUMMARY.md  CNAME  CONNECTIVITY.md  DOCS_SETUP.md  HARDWARE.md  HID_ARCHITECTURE.md  PENDING_FEATURES.md  PHASE1_IMPLEMENTATION.md  PLATFORM_PORT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  SENSOR_INTEGRATION.md  SENSOR_QUICK_REFERENCE.md  ST_CHALLENGE_ABSTRACT.md  SUPPORTED_BOARDS.md  Supported_boards.md  WASM_MANIFEST_MIGRATION.md  WASM_QUICK_REFERENCE.md  _config.yml  api-reference.md  audio-api-quick-reference.md  audio-hardware-setup.md  index.md  piezo-mems-speaker-design.md  piezo-prototype-validation.md  st-challenge-submission-guide.md
docs/AkiraHW/: PickAndPlace_PCB_Akira Basic 1.5_2025-05-05.csv
docs/AkiraMicro/: AkiraMicro.stl
docs/_includes/: head_custom.html
docs/api-reference/: error-codes.md  index.md  manifest-format.md  native-api.md
docs/architecture/: connectivity.md  data-flow.md  index.md  runtime.md  security.md  system-overview.md
docs/development/: best-practices.md  building-apps.md  debugging.md  index.md  ota-updates.md  sdk-api-reference.md  sdk-troubleshooting.md
docs/getting-started/: first-app.md  index.md  installation.md  troubleshooting.md
docs/hardware/: index.md
docs/platform/: esp32-s3.md  index.md  native-sim.md  nrf54l15.md  stm32.md
docs/resources/: faq.md  index.md  performance.md
examples/audio_demo/: README.md  audio_demo.c
include/: akira_native_api.h  ocre_config_override.h  zephyr_fatfs_config.h
include/modules/: akira_display_module.h
include/sys/: random.h
modules/: modules.cmake
modules/ocre/: CMakeLists.txt  ocre.cmake  wamr_config_override.cmake
samples/wasm_apps/: Makefile  README.md
samples/wasm_apps/hello_world/: CMakeLists.txt  Makefile  build.sh  main.c  manifest.json
scripts/: build_wasm_app.sh
src/: AkiraOS.yaml  README.md  akira.h  akiraos.c  display.c  display.h  main.c  main.c.old
src/OTA/: ota_manager.c  ota_manager.h  ota_manager_stub.c  ota_transport.c  ota_transport.h  web_server.c  web_server.h  web_server_stub.c
src/akira/: akira.h  akira_native_exports.c  init.c  shell.c
src/akira_modules/: CMakeLists.txt  Kconfig  PACKAGE.md  QUICKSTART.md  README.md
src/api/: akira_api.h  akira_bt_shell_api.c  akira_bt_shell_api.h  akira_common_api.c  akira_common_api.h  akira_display_api.c  akira_display_api.h  akira_export_api.c  akira_gui_api.c  akira_gui_api.h  akira_hid_api.c  akira_input_api.c  akira_input_api.h  akira_log_api.c  akira_memory_api.c  akira_network_api.c  akira_rf_api.c  akira_sensor_api.c  akira_sensor_api.h  akira_storage_api.c  akira_system_api.c
src/apps/: app_loader.c  app_loader.h
src/bluetooth/: README.md  bluetooth_manager.c  bluetooth_manager.h  bt_app_transfer.c  bt_app_transfer.h
src/connectivity/: README.md  buf_pool.c  buf_pool.h
src/core/: README.md  event_bus.c  event_bus.h  hardware_manager.c  hardware_manager.h  init_table.c  init_table.h  network_manager.c  network_manager.h  system_manager.c  system_manager.h
src/drivers/: akira_audio.c  akira_audio.h  akira_buttons.c  akira_buttons.h  akira_encoder.c  akira_encoder.h  akira_hal.c  akira_hal.h  bme280.c  bme280.h  buttons.c  buttons.h  cc1101.c  cc1101.h  display_ili9341.c  display_ili9341.h  driver_registry.c  driver_registry.h  font_data.c  ina219.c  ina219.h  lr1121.c  lr1121.h  lsm6ds3.c  lsm6ds3.h  nrf24l01.c  nrf24l01.h  platform_hal.c  platform_hal.h  psram.c  rf_framework.c  rf_framework.h  ssd1306.c  ssd1306.h  st7789.c  st7789.h  (+2 more)
src/drivers/sim/: CMakeLists.txt  README.md  akira_sim.c  akira_sim.h  akira_sim_buttons.c  akira_sim_display.c
tools/: Makefile  akira_simulator.py  akira_simulator_viewer.c  akira_viewer
wasm_sample/: README.md  build_wasm_apps.sh  example_app.c
(+177 files in other folders)
